fix(components): add z-index to error msg label

--- a/packages/auth/src/components/Input/styles.module.css
+++ b/packages/auth/src/components/Input/styles.module.css
@@ -106,4 +106,5 @@ textarea.input {
   background-color: #ff1f44;
   font-size: 10px;
   line-height: 1.4;
+  z-index: 1;
 }
